--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     height: 100%;
 
     width: 200px;
-    background-color: darkorange;
+    background-color: rgb(132, 0, 255);
     position: fixed;
  
 
